--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "testForCitylink.js",
   "scripts": {
-    "test": "node testForCitylink.js"
+    "start": "node testForCitylink"
   },
   "keywords": [],
   "author": "",
